--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -52,3 +52,5 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64, linux/arm64
+          build-args: |
+            VITE_API_URL=${{ secrets.VITE_API_URL }}
