--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,6 +21,9 @@ CMD sh /usr/script/entrypoint.sh
 FROM base AS build
 COPY --chown=node:node . .
 RUN npm install
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 RUN npm run build
 
 # --- Build final --
