--- a/.github/workflows/pr-frontend.yml
+++ b/.github/workflows/pr-frontend.yml
@@ -5,9 +5,9 @@ on:
     branches: [develop, main]
     types: [opened, synchronize, reopened]
     paths-ignore:
-      - '**.md'
-      - 'docs/**'
-      - '.vscode/**'
+      - "**.md"
+      - "docs/**"
+      - ".vscode/**"
 
 # La concurrence est bien gérée, on garde !
 concurrency:
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   quality-gate:
     name: Quality Gate (Lint, Test, Build)
-    uses: ./.github/workflows/ci-common.yml
+    uses: ./ci-common.yml
     with:
       path: "."
       node-version: "22"
